Update CompareListsEx.java